package com.rione.social.domain.model;

public enum RequestStatus {
	PENDING,
	ACCEPTED,
	REJECTED
}
